--- a/packages/nasa_repository/pubspec.yaml
+++ b/packages/nasa_repository/pubspec.yaml
@@ -1,22 +1,25 @@
-name: nasa_api
+name: nasa_repository
 description: A new Flutter package project.
 version: 0.0.1
+publish_to: none
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
-  enum_to_string: ^2.0.1
+  equatable: ^2.0.3
   flutter:
     sdk: flutter
-  http: ^0.13.4
+  nasa_api:
+    path: ../nasa_api
 
 dev_dependencies:
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
   mocktail: ^0.2.0
+  http: ^0.13.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
