--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,12 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^3.1.0
   cupertino_icons: ^1.0.2
   enum_to_string: ^2.0.1
   equatable: ^2.0.3
+  firebase_auth: ^3.2.0
+  firebase_core: ^1.10.0
   flutter:
     sdk: flutter
   flutter_bloc: ^7.3.3
