--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,15 +27,15 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  authentication_repository:
+    path: ./packages/authentication_repository
   cupertino_icons: ^1.0.2
   enum_to_string: ^2.0.1
   equatable: ^2.0.3
-  firebase_auth: ^3.2.0
   firebase_core: ^1.10.0
   flutter:
     sdk: flutter
   flutter_bloc: ^7.3.3
-  flutter_facebook_auth: ^3.5.6
   flutter_signin_button: ^2.0.0
   get_it: ^7.2.0
   nasa_repository:
